rename title & meta tags

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "welcome": "Welcome to Nice Gadgets store!",
+  "welcome": "Welcome to Gadgets Depot store!",
   "nav": {
     "home": "Home",
     "phones": "Phones",
