--- a/src/i18n/locales/ua.json
+++ b/src/i18n/locales/ua.json
@@ -1,5 +1,5 @@
 {
-  "welcome": "Ласкаво просимо до магазину Nice Gadgets",
+  "welcome": "Ласкаво просимо до магазину Gadgets Depot",
   "nav": {
     "home": "Головна",
     "phones": "Телефони",
